--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,18 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
-        maven { url 'http://nexus.sdp.nd/nexus/content/groups/android-public/' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        //这一句是JitPack插件
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5' //发布配置(1)
     }
 }
 
 allprojects {
     repositories {
         jcenter()
-        maven { url 'http://nexus.sdp.nd/nexus/content/groups/android-public/' }
+        maven { url "https://jitpack.io" } //发布配置(2)
     }
 }
 
