--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,6 @@ VERSION_NAME=0.0.1.dialog
 POM_NAME=SDP-MODULE Library
 POM_PACKAGING=aar
 POM_DESCRIPTION=AndroidModule
+android.useDeprecatedNdk=true
+android.useAndroidX=true
+android.enableJetifier=true
