--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         //这一句是JitPack插件
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5' //发布配置(1)
     }
@@ -11,6 +12,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
         maven { url "https://jitpack.io" } //发布配置(2)
     }
